*SVN*

* Use string key to obtain action value. Allows indifferent hashes to be disabled.

* Added ActionView::Base.cache_template_loading back.

* Rewrote compiled templates to decrease code complexity. Removed template load caching in favour of compiled caching. Fixed template error messages. [Nicholas Seckar]

* Fix Routing to handle :some_param => nil better. [Nicholas Seckar, Luminas]

* Add support for :include with pagination (subject to existing constraints for :include with :limit and :offset) #1478 [michael@schubert.cx]

* Prevent the benchmark module from blowing up if a non-HTTP/1.1 request is processed

* Added :use_short_month option to select_month helper to show month names as abbreviations

* Make link_to escape the javascript in the confirm option #1964 [nicolas.pouillard@gmail.com]

* Make assert_redirected_to properly check URL's passed as strings #1910 [Scott Barron]

* Make sure :layout => false is always used when rendering inside a layout

* Use raise instead of assert_not_nil in Test::Unit::TestCase#process to ensure that the test variables (controller, request, response) have been set

* Make sure assigns are built for every request when testing #1866

* Allow remote_addr to be queried on TestRequest #1668

* Fixed bug when a partial render was passing a local with the same name as the partial

* Improved performance of test app req/sec with ~10% refactoring the render method #1823 [Stefan Kaes]

* Improved performance of test app req/sec with 5-30% through a series of Action Pack optimizations #1811 [Stefan Kaes]

* Changed caching/expiration/hit to report using the DEBUG log level and errors to use the ERROR log level instead of both using INFO

* Added support for per-action session management #1763
